fix: Connector header on dark mode (#285)
* fixes https://github.com/ConduitIO/conduit-site/issues/282

* use variables

--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -2,7 +2,9 @@ html[data-theme="dark"] {
   --ifm-color-primary: #75acb6f4;
   --ifm-color-primary-light: #0d4651;
   --color-background: #282D39;
+  --color-background-dark: #3C4754;
   --color-border: #3E424D;
+  --color-border-dark: #93959C;
 
   #footer-logo {
     content: url("/img/logos/conduit-logo-dark.svg");
@@ -102,6 +104,17 @@ html[data-theme="dark"] {
 
     div {
       background-color: var(--color-background);
+    }
+  }
+
+  .theme-doc-markdown {
+    .MuiBox-root {
+      background-color: var(--color-background-dark);
+      border-color: var(--color-border-dark);
+    }
+
+    &, span, svg {
+      color: var(--ifm-color-content-secondary);
     }
   }
 }
